--- a/src/test.html
+++ b/src/test.html
@@ -7,7 +7,6 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Hello Word</h1>
-  <a href="./test.html">test</a>
+  <h1>test</h1>
 </body>
 </html>
